[package]
name = "pankkivahva"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
chrono = "0.4.34"
serde = "1.0.196"
serde_json = "1.0"
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "postgres",
  "migrate",
  "chrono",
] }
tokio = { version = "1.36.0", features = ["full"] }
